corrected spacing of PitchKnobs

--- a/src/utils/styles.scss
+++ b/src/utils/styles.scss
@@ -11,9 +11,6 @@
 	transition: 0.15s ease-in-out font-size;
 }
 
-.numKnob {
-}
-
 .container {
 	display: flex;
 }
